baml_language/crates/baml_tests/snapshots/parser_constructors/baml_tests__parser_constructors__01_lexer__array_constructor.snap
---
source: target/debug/build/baml_tests-0fbde5d1c173768c/out/generated_tests.rs
expression: output
---
Word "class"
Word "Point"
LBrace "{"
Word "x"
Word "int"
Word "y"
Word "int"
RBrace "}"
Word "function"
Word "stringArray"
LParen "("
RParen ")"
Arrow "->"
Word "string"
LBracket "["
RBracket "]"
LBrace "{"
LBracket "["
Quote "\""
Word "hello"
Quote "\""
Comma ","
Quote "\""
Word "world"
Quote "\""
Comma ","
Quote "\""
Word "test"
Quote "\""
RBracket "]"
RBrace "}"
Word "function"
Word "intArray"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBracket "["
RBracket "]"
LBrace "{"
LBracket "["
Integer "1"
Comma ","
Integer "2"
Comma ","
Integer "3"
RBracket "]"
RBrace "}"
Word "function"
Word "floatArray"
LParen "("
RParen ")"
Arrow "->"
Word "float"
LBracket "["
RBracket "]"
LBrace "{"
LBracket "["
Float "1.0"
Comma ","
Float "2.0"
Comma ","
Float "3.0"
RBracket "]"
RBrace "}"
Word "function"
Word "boolArray"
LParen "("
RParen ")"
Arrow "->"
Word "bool"
LBracket "["
RBracket "]"
LBrace "{"
LBracket "["
Word "true"
Comma ","
Word "false"
Comma ","
Word "true"
RBracket "]"
RBrace "}"
Word "function"
Word "pointArray"
LParen "("
RParen ")"
Arrow "->"
Word "Point"
LBracket "["
RBracket "]"
LBrace "{"
LBracket "["
Word "Point"
LBrace "{"
Word "x"
Colon ":"
Integer "1"
Comma ","
Word "y"
Colon ":"
Integer "2"
RBrace "}"
Comma ","
Word "Point"
LBrace "{"
Word "x"
Colon ":"
Integer "3"
Comma ","
Word "y"
Colon ":"
Integer "4"
RBrace "}"
Comma ","
Word "Point"
LBrace "{"
Word "x"
Colon ":"
Integer "5"
Comma ","
Word "y"
Colon ":"
Integer "6"
RBrace "}"
RBracket "]"
RBrace "}"
