baml_language/crates/baml_tests/snapshots/parser_constructors/baml_tests__parser_constructors__01_lexer__class_constructor.snap
---
source: target/debug/build/baml_tests-0fbde5d1c173768c/out/generated_tests.rs
expression: output
---
Word "class"
Word "Point"
LBrace "{"
Word "x"
Word "int"
Word "y"
Word "int"
RBrace "}"
Word "class"
Word "Vec2D"
LBrace "{"
Word "p"
Word "Point"
Word "q"
Word "Point"
RBrace "}"
Word "function"
Word "point"
LParen "("
RParen ")"
Arrow "->"
Word "Point"
LBrace "{"
Word "Point"
LBrace "{"
Word "x"
Colon ":"
Integer "1"
Comma ","
Word "y"
Colon ":"
Integer "2"
RBrace "}"
RBrace "}"
Word "function"
Word "vec2d"
LParen "("
RParen ")"
Arrow "->"
Word "Vec2D"
LBrace "{"
Word "Vec2D"
LBrace "{"
Word "p"
Colon ":"
Word "Point"
LBrace "{"
Word "x"
Colon ":"
Integer "1"
Comma ","
Word "y"
Colon ":"
Integer "2"
RBrace "}"
Comma ","
Word "q"
Colon ":"
Word "Point"
LBrace "{"
Word "x"
Colon ":"
Integer "3"
Comma ","
Word "y"
Colon ":"
Integer "4"
RBrace "}"
RBrace "}"
RBrace "}"
