baml_language/crates/baml_tests/snapshots/parser_constructors/baml_tests__parser_constructors__01_lexer__map_constructor.snap
---
source: target/debug/build/baml_tests-0fbde5d1c173768c/out/generated_tests.rs
expression: output
---
Word "function"
Word "stringValues"
LParen "("
RParen ")"
Arrow "->"
Word "map"
Less "<"
Word "string"
Comma ","
Word "string"
Greater ">"
LBrace "{"
LBrace "{"
Quote "\""
Word "hello"
Quote "\""
Colon ":"
Quote "\""
Word "world"
Quote "\""
Comma ","
Quote "\""
Word "test"
Quote "\""
Colon ":"
Quote "\""
Word "test"
Quote "\""
RBrace "}"
RBrace "}"
Word "function"
Word "intValues"
LParen "("
RParen ")"
Arrow "->"
Word "map"
Less "<"
Word "string"
Comma ","
Word "int"
Greater ">"
LBrace "{"
LBrace "{"
Quote "\""
Word "hello"
Quote "\""
Colon ":"
Integer "1"
Comma ","
Quote "\""
Word "test"
Quote "\""
Colon ":"
Integer "2"
RBrace "}"
RBrace "}"
Word "function"
Word "floatValues"
LParen "("
RParen ")"
Arrow "->"
Word "map"
Less "<"
Word "string"
Comma ","
Word "float"
Greater ">"
LBrace "{"
LBrace "{"
Quote "\""
Word "hello"
Quote "\""
Colon ":"
Float "1.0"
Comma ","
Quote "\""
Word "test"
Quote "\""
Colon ":"
Float "2.0"
RBrace "}"
RBrace "}"
Word "function"
Word "boolValues"
LParen "("
RParen ")"
Arrow "->"
Word "map"
Less "<"
Word "string"
Comma ","
Word "bool"
Greater ">"
LBrace "{"
LBrace "{"
Quote "\""
Word "hello"
Quote "\""
Colon ":"
Word "true"
Comma ","
Quote "\""
Word "test"
Quote "\""
Colon ":"
Word "false"
RBrace "}"
RBrace "}"
